metrics-routing/ingressnginx.yml
# Requesting for letsencrypt cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qr-app-ingress
  namespace: qr-app
  labels:
    app: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: qr.sapphireaura.com.ng
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-end
            port:
              number: 80
  tls:
  - hosts:
      - qr.sapphireaura.com.ng
    secretName: letsencrypt-production
